--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,7 @@
-package: .
+package: github.com/t11e/go-groveclient
 import:
 - package: github.com/t11e/go-pebbleclient
+  version: master
 - package: github.com/stretchr/testify
   subpackages:
   - assert
